tests/valid/11_funcion_nula.patito
programa funcionNula;
vars
    x : entero;

nula saludar() {
    {
        escribe("Hola desde una funcion");
    }
} ;

inicio
{
    saludar();
    x = 5;
}
fin
