tests/invalid/06_letrero_sin_cierre.patito
programa letreroMalo;
inicio
{
    escribe("hola sin cerrar);
}
fin
